<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numberTextField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center"
            android:text="@string/screen_title_adjust_comparison_settings"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/helperText"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/screen_helper_adjust_comparison_settings"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/yearlySalarySettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/job_class_yearly_salary" />

        <EditText
            android:id="@+id/yearlySalarySettingInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/yearlyBonusSettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/job_class_yearly_bonus" />

        <EditText
            android:id="@+id/yearlyBonusSettingInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/gymMembershipAnnualSettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/job_class_gym_membership_annual" />

        <EditText
            android:id="@+id/gymMembershipAnnualSettingInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/leaveTimeSettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/job_class_leave_time_days" />

        <EditText
            android:id="@+id/leaveTimeDaysSettingInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/match401KSettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/job_class_match_401k_percentage" />

        <EditText
            android:id="@+id/match401kPercentageSettingInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/petInsuranceSettingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/job_class_pet_insurance_annual" />

        <EditText
            android:id="@+id/petInsuranceAnnualSettingInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0.3dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/button_save" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0.25dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/button_cancel" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
