...
        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="left" />

        <Button
            android:id="@+id/jobDetailsMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@android:color/holo_purple"
            android:baselineAligned="false"
...
            android:layout_marginRight="50dp"
            android:backgroundTint="@android:color/holo_purple"
            android:baselineAligned="false"
            android:text="@string/enter_job_offer" />

        <Button
            android:id="@+id/comparisonSettingsMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@android:color/holo_purple"
            android:baselineAligned="false"
...
