<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numberTextField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/jobDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/screenTitle"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:gravity="center"
                android:text="@string/screen_title_job_details"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/helperText"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:gravity="center"
                android:text="@string/screen_helper_job_details_enter_job_details_below"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_company_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_cost_of_living_index">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costOfLivingIndexInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_yearly_salary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/yearlySalaryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_yearly_bonus">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/yearlyBonusInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_gym_membership_annual">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gymMembershipAnnualInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_leave_time_days">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/leaveTimeDaysInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_match_401k_percentage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/match401kPercentageInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/job_class_pet_insurance_annual">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petInsuranceAnnualInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0.3dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:text="@string/button_save" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="0.25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:text="@string/button_cancel" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/compareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_purple"
                    android:enabled="false"
                    android:text="@string/button_compare" />

                <Button
                    android:id="@+id/enterAnother"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_purple"
                    android:text="@string/enter_another_offer" />

                <Button
                    android:id="@+id/returnToMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/button_return_to_menu" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
